--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,10 +20,10 @@ jobs:
         go-version: 1.15
 
     - name: Run test
-      run: go test -race -coverprofile=coverage.out.tmp -covermode=atomic ./...
+      run: go test -race -coverprofile=tmp_coverage.out -covermode=atomic ./...
 
-    - name: Coverage
-      run: cat coverage.out.tmp | grep -v "mock_" > coverage.out
+    - name: Prepare coverage
+      run: cat tmp_coverage.out | grep -v "mock_" > coverage.out
 
     - name: Upload coverage to Codecov
       run: bash <(curl -s https://codecov.io/bash)
